--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,5 +1,6 @@
 {
 	"Starting [{{name}}] microservice": "Starting [{{name}}] microservice",
 	"Route [{{scheme}}://{{host}}:{{port}}{{{name}}}] is ready.": "Route [{{scheme}}://{{host}}:{{port}}{{{name}}}] is ready.",
-	"Http server is running at [{{scheme}}://{{host}}:{{port}}]": "Http server is running at [{{scheme}}://{{host}}:{{port}}]"
+	"Http server is running at [{{scheme}}://{{host}}:{{port}}]": "Http server is running at [{{scheme}}://{{host}}:{{port}}]",
+	"Queue [{{name}}] is empty.": "Queue [{{name}}] is empty."
 }
